# lora-id-cnn

./: .gitignore  pyproject.toml  readme.md
data_collection/: lora_preamble_collector.grc  lora_preamble_collector.py  lora_preamble_collector_epy_block_0.py
data_collection/LoRaSender_heltecv3/: LoRaSender_heltecv3.ino
dataset/: labels.npz
models/: data.py  experiments.py  models.py  report.py  test.py  train.py
results/decimation/: decimation.pth  decimation_report.typ
results/decimation_bizzaro_world/: decimation.pth
results/decimation_contrast/: decimation_contrast.pth  decimation_contrast_report.typ
results/decimation_reversed/: decimation_reversed_report.typ
results/noise/: noise.pth  noise_report.typ
results/normalization/: normalization.pth  normalization_report.typ
results/room_fullwidth/: room_fullwidth_report.typ
results/room_main/: room_main.pth  room_main_report.typ
results/room_normalized/: room_normalized.pth  room_normalized_report.typ
results/windowed_random/: windowed_random_report.typ
results/windowing_contrast/: windowing_contrast.pth  windowing_contrast_report.typ
results/wired_main/: wired_main.pth  wired_main_report.typ
results/wired_normalized/: wired_normalized.pth  wired_normalized_report.typ
room_fullwidth/: room_fullwidth_report.typ
room_main/: room_main.pth  room_main_report.typ
room_normalized/: room_normalized_report.typ
windowed_random/: windowed_random_report.typ
wired_fullwidth/: wired_fullwidth_report.typ
wired_main/: wired_main.pth  wired_main_report.typ
(+13968 files in other folders)
